tests/fixtures/invalid_syntax/invalid_token.syn
ITEM @ref2020
    quote = Missing colon
END ITEM
